--- a/index.html
+++ b/index.html
@@ -7,13 +7,23 @@
         body{
           margin:0;
         }
-        img:{
-            max-width: 100%;
-            vertical-align: top;
-        }
+        img {
+      max-width: 100%;
+      vertical-align: top;
+      /*display: none;*/
+    }
+    img#reponsive {
+      display: none;
+    }
+    @media screen and (max-width: 768px) {
+      img#reponsive {
+        display: block;
+      }
+    }
     </style>
   </head>
   <body>
+    <img src="invie-responsive.png" alt="" id="responsive">
     <img src="header.jpg" alt="">
     <img src="hero.jpg" alt="">
     <img src="acustica.jpg" alt="">
